Refresh-сессии в БД и Swagger
